// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
    provider = "prisma-client-js"
}

generator dbml {
    provider            = "prisma-dbml-generator"
    projectDatabaseType = "postgresql"
    projectName         = "water-gas-gemini-api"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

model Customer {
    id        String    @id @default(uuid())
    measures  Measure[]
    createdAt DateTime  @default(now()) @map("created_at")
    updatedAt DateTime  @updatedAt @map("updated_at")

    @@map("customer")
}

model Measure {
    id              String      @id @default(uuid())
    type            MeasureType @relation(fields: [measureTypeId], references: [id])
    customer        Customer    @relation(fields: [customerId], references: [id])
    customerId      String      @map("customer_id")
    value           Int         @default(0)
    measureTypeId   String      @map("measure_type_id")
    hasConfirmed    Boolean     @default(false) @map("has_confirmed")
    imageUrl        String      @map("image_url")
    measurementDate DateTime    @map("measurement_date")
    createdAt       DateTime    @default(now()) @map("created_at")
    updatedAt       DateTime    @updatedAt @map("updated_at")

    @@map("measure")
}

model MeasureType {
    id        String    @id @default(uuid())
    name      String    @unique
    measure   Measure[]
    createdAt DateTime  @default(now()) @map("created_at")
    updatedAt DateTime  @updatedAt @map("updated_at")

    @@map("measure_type")
}
